--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-  {% include head.html %}
+  {% include html/head.html %}
 
   <body>
 
-    {% include sidebar.html %}
+    {% include html/sidebar.html %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
@@ -26,5 +26,7 @@
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
+
+    {% include html/end-body.html %}
   </body>
 </html>
