--- a/public/css/nick.css
+++ b/public/css/nick.css
@@ -36,10 +36,15 @@ button {
   .with-focus-effect:focus {
     outline: 1px solid #333333; }
 
+/* overrides */
+.masthead-title small {
+  font-size: 16px;
+  text-transform: uppercase; }
+
 /* Home page styles */
 @keyframes fadeDark {
   0% {
-    background: transparent; }
+    background: rgba(0, 0, 0, 0.75); }
 
   100% {
     background: rgba(0, 0, 0, 0.5); } }
@@ -49,12 +54,14 @@ button {
 
   100% {
     background: transparent; } }
-@keyframes fadeIn {
+@keyframes fadeInAndDown {
   0% {
-    opacity: 0; }
+    opacity: 0;
+    transform: translateY(-4rem); }
 
   100% {
-    opacity: 1; } }
+    opacity: 1;
+    transform: translateY(0); } }
 @keyframes fadeInAndUp {
   0% {
     opacity: 0;
@@ -77,11 +84,8 @@ button {
     left: 0;
     width: 100%;
     height: 100%; }
-  .home--body:after {
-    background: white;
-    animation: fadeOutLight 0.5s ease-in-out both; }
   .home--body:before {
-    animation: fadeDark 0.25s ease-in-out both; }
+    animation: fadeDark 1.5s ease-out both; }
 
 .home--info {
   position: relative;
@@ -90,14 +94,14 @@ button {
   justify-content: space-around;
   height: 100%;
   z-index: 1;
-  text-align: center;
-  animation: fadeIn 0.5s ease-in 0.5s forwards; }
+  text-align: center; }
   .home--info h2,
   .home--info li {
     color: white; }
-  .home--info h2 {
+  .home--info .name {
     font-size: 2.5em;
-    font-weight: 100; }
+    font-weight: 100;
+    animation: fadeInAndDown 0.5s ease-in 0.5s both; }
 
 .name,
 .tagline {
@@ -137,6 +141,12 @@ button {
   animation-delay: 0.6s; }
 
 /* contact page */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+
+  100% {
+    transform: rotate(360deg); } }
 .response-message {
   display: none; }
 
@@ -158,6 +168,14 @@ button {
   .contact-control textarea {
     height: 12em; }
 
+@media (min-width: 38em) {
+  .contact-control-pair {
+    display: flex; }
+    .contact-control-pair .contact-control {
+      flex: 1; }
+      .contact-control-pair .contact-control:first-of-type {
+        margin-right: 1rem; } }
+
 .email-send {
   background: transparent;
   border: 1px solid #dddddd;
@@ -170,3 +188,14 @@ button {
 .response-message {
   font-family: "FreightSans Pro", "PT Sans", Helvetica, Arial, sans-serif;
   text-align: center; }
+
+.status-icon {
+  font-family: sans-serif;
+  font-size: 4rem;
+  color: #dddddd; }
+
+.error-icon {
+  color: rgba(192, 57, 43, 0.5); }
+
+.success-icon {
+  color: rgba(39, 174, 96, 0.5); }
