--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/nick.css">
   
+  <script type="text/javascript" src="//use.typekit.net/uvi6xos.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
   <!--
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
   -->
