--- a/public/css/nick.css
+++ b/public/css/nick.css
@@ -99,19 +99,18 @@ button {
   .home--info li {
     color: white; }
   .home--info .name {
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 100;
-    animation: fadeInAndDown 0.5s ease-in 0.5s both; }
-
-.name,
-.tagline {
-  display: block; }
-
-.tagline {
-  font-size: 0.5em;
-  font-weight: 100;
-  text-transform: uppercase;
-  letter-spacing: 2px; }
+    animation: fadeInAndDown 0.5s ease-out 0.5s both; }
+  .home--info .tagline {
+    font-size: 0.75em;
+    font-weight: 100;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    animation: fadeInAndDown 0.5s ease-out 0.75s both; }
+  .home--info .name,
+  .home--info .tagline {
+    display: block; }
 
 .channel-links {
   padding-left: 0; }
@@ -126,19 +125,19 @@ button {
       color: white; }
 
 .channel-links li:nth-of-type(5) {
-  animation-delay: 1s; }
+  animation-delay: 1.15s; }
 
 .channel-links li:nth-of-type(4) {
-  animation-delay: 0.9s; }
+  animation-delay: 1.05s; }
 
 .channel-links li:nth-of-type(3) {
-  animation-delay: 0.8s; }
+  animation-delay: 0.95s; }
 
 .channel-links li:nth-of-type(2) {
-  animation-delay: 0.7s; }
+  animation-delay: 0.85s; }
 
 .channel-links li:nth-of-type(1) {
-  animation-delay: 0.6s; }
+  animation-delay: 0.75s; }
 
 /* contact page */
 @keyframes spin {
