--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -14,11 +14,14 @@
   </title>
 
   <!-- CSS -->
+  <!--
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/nick.css">
-  
+  -->
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/blog.css">
+
   <script type="text/javascript" src="//use.typekit.net/uvi6xos.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
