Attempt 1 resolve page build error

--- a/_includes/html/end-body.html
+++ b/_includes/html/end-body.html
@@ -1,1 +1,2 @@
-<script src="{{ site.baseurl }}public/js/blog.js"></script>
+<script src="{{ site.baseurl }}public/js/prefixfree.min.js"></script>
+<script src="{{ site.baseurl }}public/bower_components/jquery/dist/jquery.min.js"></script>
