/public not needed?

--- a/_includes/html/end-body.html
+++ b/_includes/html/end-body.html
@@ -1,2 +1,2 @@
-<script src="{{ site.baseurl }}public/js/prefixfree.min.js"></script>
-<script src="{{ site.baseurl }}public/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="{{ site.baseurl }}js/prefixfree.min.js"></script>
+<script src="{{ site.baseurl }}bower_components/jquery/dist/jquery.min.js"></script>
