--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/nick.css">
   -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/blog.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}css/blog.css">
 
   <script type="text/javascript" src="//use.typekit.net/uvi6xos.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -38,7 +38,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
   -->
-  
+
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 </head>
