--- a/_includes/css/nick.sass
+++ b/_includes/css/nick.sass
@@ -77,7 +77,7 @@ button
     transform: translateY(0)
 
 .home--body
-  background-image: url("/public/img/rain-window.jpg")
+  background-image: url("{{ site.baseurl }}public/img/rain-window.JPG")
   background-size: cover
   background-position: center center
   overflow: hidden
