Img sizes + little tweaks

--- a/_includes/css/nick.sass
+++ b/_includes/css/nick.sass
@@ -77,7 +77,7 @@ button
     transform: translateY(0)
 
 .home--body
-  background-image: url("{{ site.baseurl }}/public/img/rain-window.JPG")
+  background-image: url("{{ site.baseurl }}/public/img/rain-window-75.JPG")
   background-size: cover
   background-position: center center
   overflow: hidden
