--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   {{ content }}
 </div>
 
-{% if site.related_posts %}
+{% if site.related_posts.size > 0 %}
   <div class="related">
     <h2>Related Posts</h2>
     <ul class="related-posts">
