--- a/_includes/html/sidebar.html
+++ b/_includes/html/sidebar.html
@@ -26,13 +26,14 @@
     {% endfor %}
 
     <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/blog">Blog</a>
+    <a class="sidebar-nav-item" href="{{ site.github_repo }}">Source on GitHub</a>
     <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.author.name }} {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
 </div>
