--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -22,7 +22,7 @@
   -->
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/blog.css">
 
-  <script type="text/javascript" src="//use.typekit.net/uvi6xos.js"></script>
+  <script type="text/javascript" src="//use.typekit.net/hbf7tpm.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <!--
