--- a/_includes/css/nick.sass
+++ b/_includes/css/nick.sass
@@ -102,7 +102,7 @@ button
   height: 100%
   z-index: 1
   text-align: center
-  // animation: 
+  // animation:
   h2,
   li
     color: #fff
@@ -148,7 +148,7 @@ $channels: 5
   100%
     transform: rotate(360deg)
 
-.response-message 
+.response-message
   display: none
 
 .contact-control
@@ -183,7 +183,7 @@ $channels: 5
 
 .email-send
   background: transparent
-  border: 1px solid #ddd  
+  border: 1px solid #ddd
   padding: .5rem 1rem
   margin: 2rem auto 1rem
   display: block
@@ -204,3 +204,13 @@ $channels: 5
 
 .success-icon
   color: rgba(39, 174, 96, .5)
+
+
+
+/* tables */
+
+.cell-negative
+  background: rgba(231, 76, 60, .2)
+
+.cell-positive
+  background: rgba(46, 204, 113, .2)
