--- a/_includes/css/nick.css
+++ b/_includes/css/nick.css
@@ -75,7 +75,7 @@ button {
     transform: translateY(0); } }
 
 .home--body {
-  background-image: url("{{ site.baseurl }}/public/img/rain-window.JPG");
+  background-image: url("{{ site.baseurl }}/public/img/rain-window-75.JPG");
   background-size: cover;
   background-position: center center;
   overflow: hidden;
@@ -203,3 +203,10 @@ button {
 
 .success-icon {
   color: rgba(39, 174, 96, 0.5); }
+
+/* tables */
+.cell-negative {
+  background: rgba(231, 76, 60, 0.2); }
+
+.cell-positive {
+  background: rgba(46, 204, 113, 0.2); }
