--- a/_includes/css/poole.css
+++ b/_includes/css/poole.css
@@ -243,8 +243,9 @@ th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
 }
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
+
+table:not(.plain) tbody tr:nth-child(odd) td,
+table:not(.plain) tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
 }
 
